remove duplicate --add-modules jdk.incubator.vector